--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "classnames": "^2.2.6",
     "immer": "^8.0.1",
     "node-sass": "^5.0.0",
+    "polished": "^4.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
