--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^5.0.0",
     "polished": "^4.1.0",
     "react": "^17.0.1",
+    "react-async": "^10.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-scripts": "4.0.1",
